create catalog activity and cart activity

--- a/MVCMobilePOS/res/values/strings.xml
+++ b/MVCMobilePOS/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="title_activity_add_screen">AddScreen</string>
     <string name="title_activity_history_screen">HistoryScreen</string>
     <string name="title_activity_setting_screen">SettingScreen</string>
+    <string name="title_activity_cart_screen">CartScreen</string>
 
 </resources>
