remove purchase popup dialog on inventory screen fix edit popup dialog on inventory screen add update screen

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,9 +15,13 @@
     <string name="title_activity_history_screen">HistoryScreen</string>
     <string name="title_activity_setting_screen">SettingScreen</string>
     <string name="title_activity_cart_screen">CartScreen</string>
-	<string-array name="CmdMenu">
+
+    <string-array name="CmdMenu">
         <item>Purchase</item>
         <item>Edit</item>
-        <item >Delete</item>
+        <item>Delete</item>
     </string-array>
+
+    <string name="title_activity_update_screen">UpdateScreen</string>
+
 </resources>
